# project-igi-editor

./: .gitignore  CHANGELOGS.md  CMakeLists.txt  LEGAL.md  LICENSE  README.md  config.ini  igi-editor.exe.manifest  task-goto-model.md  test.c  test.cpp  test_levels.ps1  test_screenshot.py  version  versions.md
.planning/: STATE.md
.planning/phases/igi-link/: igi-link-2026-05-10-igi-link-plan-SUMMARY.md
assets/: igi-editor-icon.rc  igi-editor.rc
assets/content/qed/: qedkeybindings.qsc
assets/content/shaders/21/: flat_sky_layer.frag  flat_sky_layer.vert  flat_sky_layer_wireframe.frag  flat_sky_layer_wireframe.vert  skydome.frag  skydome.vert  skydome_wireframe.frag  terrain_fog.vert  terrain_lmp.frag  terrain_mat.frag  terrain_passing.vert  terrain_wireframe.frag
assets/content/tools/: IGIModels.json
assets/editor/: editor.bat
assets/editor/qed/: editor_camera.spr  editor_move.spr  qedconfig.qvm  qedconfigtask.qvm  qedkeybindings.qsc  qedkeybindings.qvm
assets/editor/shaders/41/: flat_sky_layer.frag  flat_sky_layer.vert  flat_sky_layer_wireframe.frag  flat_sky_layer_wireframe.vert  skydome.frag  skydome.vert  skydome_wireframe.frag  terrain_fog.frag  terrain_fog.vert  terrain_lmp.frag  terrain_mat.frag  (+2 more)
assets/editor/tools/: IGIModels.json
assets/misc/: IGIModels.json
cmake/: fetch_igi1conv.cmake
docs/: APPLY_LIGHTMAP_EDITOR_GUIDE.md  CLI.md  KNOWN_ISSUES.md  file-formats.md  format_fnt.md  game_file_formats.md  game_parsers.md  game_structure.md  graph_editor.md  igi1-file-formats.md  model_naming.md  parameter_data_types.md
docs/superpowers/plans/: 2026-05-10-igi-link-plan.md  2026-05-10-terrain-editor-plan.md  2026-06-04-find-fixes-ai-script-editor.md  2026-06-25-lightmap-editor.md
docs/superpowers/specs/: 2026-05-10-igi-link-design.md  2026-05-29-gpu-color-picking-design.md  2026-06-03-comprehensive-test-suite-design.md  2026-06-04-find-fixes-ai-script-editor-design.md  2026-06-08-editor-bugfix-batch-design.md  2026-06-25-lightmap-editor-design.md  2026-07-09-imgui-integration-design.md
gconv/: cmd_dat.cpp  cmd_dat.h  cmd_fnt.cpp  cmd_fnt.h  cmd_graph.cpp  cmd_graph.h  cmd_mef.cpp  cmd_mef.h  cmd_mtp.cpp  cmd_mtp.h  cmd_qsc.cpp  cmd_qsc.h  cmd_qvm.cpp  cmd_qvm.h  cmd_res.cpp  cmd_res.h  cmd_terrain.cpp  cmd_terrain.h  cmd_tex.cpp  cmd_tex.h  main.cpp  pch.h  support.cpp
scratch/: app_manip.cpp  level_object_verification.py
shaders/21/: terrain_fog.frag
shaders/32/: terrain_fog.frag
shaders/41/: object.frag  object.vert
shaders/45/: object.frag  object.vert  terrain_fog.frag
source/: animation.cpp  animation.h  app.cpp  app.h  app_devtools_ui.cpp  app_editor.cpp  app_input.cpp  app_input_keyboard.cpp  app_input_mouse.cpp  app_internal.h  app_level.cpp  app_lookup.cpp  app_ui.cpp  app_view.cpp  cli_handler.cpp  cli_handler.h  cli_tests.cpp  common.cpp  common.h  compiler.cpp  config.cpp  config.h  debug_command_manager.cpp  debug_command_manager.h  decompiler.cpp  igi_bridge.cpp  igi_bridge.h  imgui_glut_backend.cpp  imgui_glut_backend.h  logger.cpp  logger.h  main.cpp  mef.cpp  mef.h  model_loader.cpp  model_loader.h  pch.h  utils.cpp  utils.h  utils_igi1conv.cpp  (+1 more)
source/camera/: camera.cpp
source/cli/: asset_extractor.cpp  asset_extractor.h  cli_handler.cpp  cli_handler.h  cli_tests.cpp  cli_tests.h  compiler.h  decompiler.cpp  decompiler.h  verify_level.cpp  verify_level_core.cpp  verify_level_core.h
source/editor/: object_editor.cpp
source/level/: app_level.cpp  flat_sky_layer.cpp  graph_parser.h  level.cpp  level.h  level_common.cpp  level_common.h  level_objects.cpp  level_objects.h  level_objects_internal.h  level_objects_serialize.cpp  mtp_parser.h  mtp_writer.cpp  mtp_writer.h  qsc_lexer.cpp  qsc_lexer.h  qsc_parser.cpp  qsc_parser.h  qvm_compiler.h  qvm_decompiler.h  qvm_parser.cpp  res_model_set.cpp  res_model_set.h  res_parser.cpp  task_schema.cpp  task_schema.h  terrain.cpp  terrain.h  terrain_files.cpp  terrain_files.h  terrain_internal.h  terrain_io.cpp  terrain_lod.cpp  terrain_mesh.cpp  terrain_query.cpp  tex_parser.h
source/parsers/: dat_parser.cpp  dat_parser.h  fnt_parser.cpp  graph_parser.cpp  graph_parser.h  mef_exporter.cpp  mef_exporter.h  mef_native.cpp  mef_native.h  mef_parser.cpp  mef_parser.h  mtp_parser.cpp  mtp_parser.h  mtp_tool.cpp  mtp_tool.h  qvm_compiler.cpp  qvm_decompiler.cpp  qvm_decompiler.h  qvm_parser.h  res_compiler.cpp  res_compiler.h  res_parser.cpp  res_parser.h  terrain_files.cpp  tex_parser.cpp
source/renderer/: dat_writer.cpp  dat_writer.h  fnt_parser.cpp  fnt_parser.h  gl_helper.cpp  gl_helper.h  glb_loader.cpp  glb_loader.h  graph_overlay.h  graph_project.cpp  graph_writer.cpp  hardcoded_bones.h  mef_exporter.cpp  mef_exporter.h  mef_native.cpp  mef_native.h  mef_parser.cpp  model.cpp  model.h  olm_texture.cpp  olm_texture.h  png_loader.cpp  png_loader.h  qvm_decompiler.cpp  qvm_parser.cpp  renderer.cpp  renderer.h  renderer_draw.cpp  renderer_flat_sky_layer.cpp  renderer_internal.h  renderer_objects.cpp  renderer_objects.h  renderer_objects_atta.cpp  renderer_objects_internal.h  renderer_objects_mesh.cpp  renderer_objects_metadata.cpp  renderer_objects_picking.cpp  renderer_objects_texture.cpp  renderer_objects_visual.cpp  renderer_rain.cpp  (+14 more)
tests/: test_config.cpp  test_dat_parser.cpp  test_dat_writer.cpp  test_debug_command_manager.cpp  test_debug_command_parser.cpp  test_fnt_parser.cpp  test_gconv_cli.cpp  test_graph_overlay.cpp  test_graph_parser.cpp  test_igi1conv_lightmap.cpp  test_mef_native_lightmap.cpp  test_mtp_parser.cpp  test_mtp_writer.cpp  test_pickup_resolve.cpp  test_qsc_lexer.cpp  test_qsc_parser.cpp  test_qvm_roundtrip.cpp  test_res_model_set.cpp  test_res_parser.cpp  test_res_stream_append.cpp  test_tex_parser.cpp  test_utils.cpp  test_verify_level.cpp  test_verify_unit.cpp
tests/fixtures/: level01_simple.qsc
vcbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  igi_terrain.sln  terrain.vcxproj  terrain.vcxproj.filters
vcbuild/terrain.dir/Release/: terrain.exe.recipe
(+49 files in other folders)
